# Mini-Project

./: main.py  pyproject.toml  requirements.txt
formulaone/: data.py  models.py
formulaone/core/: routes.py
formulaone/core/templates/core/: detail.html  index.html
formulaone/formulaone/: routes.py
formulaone/formulaone/templates/formulaone/: edit_formulaone.html  index.html  new_formulaone.html
formulaone/templates/: navbar.html
formulaone/users/: routes.py
formulaone/users/templates/users/: change_password.html  index.html
